@@ -52,6 +52,26 @@
                 <a href="scm.html">SVN/JIRA</a>.</p>
             </summary>
             <bugs>
+                <bug id="1382" tool="jira">
+                    <description>
+                        Fixed wrongly coded boolean expressions.
+                    </description>
+                    <contributor>
+                        <name>David Buschman</name>
+                        <email>dbuschman7@yahoo.com</email>
+                    </contributor>
+                    <submitter>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </submitter>
+                    <reporter>
+                        <name>David Buschman</name>
+                        <email>dbuschman7@yahoo.com</email>
+                    </reporter>
+                    <type>Bug</type>
+                    <module>XML</module>
+                    <date>20060426</date>
+                </bug>
                 <bug id="1410" tool="jira">
                     <description>
                         Fixed broken links to cvs.html (replaced with scm.html).
